# Ryn

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: BuildDefinitions.cmake  CompileOptions.cmake  CompilerOptions.cmake  GlobalSettings.cmake  PlatformDefinitions.cmake
Collections/: CMakeLists.txt
Collections/Include/Ryn/: Collections.hpp
Collections/Include/Ryn/Collections/: Iterable.hpp  List.hpp
Collections/Source/: Collections.cpp
Core/: CMakeLists.txt
Core/Include/Ryn/: Core.hpp
Core/Include/Ryn/Core/: Casts.hpp  Concepts.hpp  Iterable.hpp  Memory.hpp  Numeric.hpp  Ref.hpp  String.hpp  Traits.hpp  Types.hpp
Core/Source/: Core.cpp  String.cpp
Framework/: CMakeLists.txt
Framework/Include/: Ryn.hpp
Framework/Include/Ryn/Framework/: Console.hpp  Entity.hpp  EntryPoint.hpp  Game.hpp
Framework/Source/: Console.cpp  EntryPoint.cpp  Game.cpp  Ryn.cpp
Graphics/: CMakeLists.txt
Graphics/Include/Ryn/: Graphics.hpp
Graphics/Include/Ryn/Graphics/: Buffer.hpp  Color.hpp  Renderer.hpp  Shader.hpp
Graphics/Shaders/: Color.frag  Color.vert
Graphics/Source/: Buffer.cpp  Renderer.cpp  Shader.cpp
Graphics/Source/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp
IO/: CMakeLists.txt
IO/Include/Ryn/: IO.hpp
IO/Include/Ryn/IO/: Console.hpp  File.hpp
IO/Source/: Console.cpp  File.cpp
Mathematics/: CMakeLists.txt
Mathematics/Include/Ryn/: Mathematics.hpp
Mathematics/Include/Ryn/Mathematics/: Math.hpp  Matrix.hpp  Matrix4x4.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Mathematics/Source/: Math.cpp
Native/: CMakeLists.txt
Native/Include/Ryn/: Native.hpp
Native/Include/Ryn/Native/: GLFW.hpp  OpenGL.hpp  Platform.hpp
Native/Source/: GLFW.cpp  OpenGL.cpp  Platform.Unix.cpp  Platform.Windows.cpp  Platform.cpp
Rendering/: CMakeLists.txt
Rendering/Include/Ryn/: Rendering.hpp
Rendering/Include/Ryn/Rendering/: Color.hpp  Renderer.hpp  Sprite.hpp
Rendering/Source/: Color.cpp  Renderer.cpp
Rendering/Source/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.hpp
Ryn.Collections/: CMakeLists.txt
Ryn.Collections/Include/Ryn/: Collections.hpp
Ryn.Collections/Include/Ryn/Collections/: Array.hpp  List.hpp  Vector.hpp
Ryn.Core/: CMakeLists.txt
Ryn.Core/Include/Ryn/: Core.hpp
Ryn.Core/Include/Ryn/Core/: Clock.hpp  Function.hpp  Iterable.hpp  Iterator.hpp  Memory.hpp  Process.hpp  Slice.hpp  Span.hpp  String.hpp  Traits.hpp  Types.hpp  Utility.hpp
Ryn.Core/Source/: Clock.cpp  Memory.cpp  String.cpp
Ryn.Core/Source/MacOS/: Clock.cpp
Ryn.Core/Source/Platform/MacOS/: Clock.cpp
Ryn.Core/Source/Platform/Mach/: Clock.cpp
Ryn.Core/Source/Platform/POSIX/: Memory.cpp  Process.cpp
Ryn.Framework/: CMakeLists.txt
Ryn.Framework/Include/: Ryn.hpp
Ryn.Framework/Include/Ryn/: Framework.hpp
Ryn.Framework/Include/Ryn/Framework/: Game.hpp  InputContext.hpp
Ryn.Framework/Source/: Game.cpp  InputContext.cpp
Ryn.Graphics/: CMakeLists.txt
Ryn.Graphics/Include/Ryn/: Graphics.hpp
Ryn.Graphics/Include/Ryn/Graphics/: Renderer.hpp
Ryn.Graphics/Source/Vulkan/: Vulkan.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
Ryn.Graphics/Source/Vulkan/Platform/: VulkanInstance.Metal.mm  VulkanMetal.mm  VulkanPlatform.Metal.mm
Ryn.IO/: CMakeLists.txt
Ryn.IO/Include/Ryn/: IO.hpp
Ryn.IO/Include/Ryn/IO/: File.hpp  Log.hpp
Ryn.IO/Source/Platform/POSIX/: File.cpp  Log.cpp
Ryn.IO/Source/Platform/Unix/: File.cpp
Ryn.IO/Source/Unix/: File.cpp
Ryn.Mathematics/: CMakeLists.txt
Ryn.Mathematics/Include/Ryn/: Mathematics.hpp
Ryn.Mathematics/Include/Ryn/Mathematics/: Constants.hpp  Math.hpp  Vector2.hpp  Vector3.hpp
Ryn.Mathematics/Source/: Math.cpp
Ryn.Numerics/: CMakeLists.txt
Ryn.Numerics/Include/Ryn/: Numerics.hpp
Ryn.Numerics/Include/Ryn/Numerics/: Constants.hpp  Math.hpp  Vector2.hpp
Ryn.Numerics/Source/: Math.cpp
Ryn.Windowing/: CMakeLists.txt
Ryn.Windowing/Include/Ryn/: Windowing.hpp
Ryn.Windowing/Include/Ryn/Windowing/: Window.hpp  WindowSettings.hpp
Ryn.Windowing/Include/Ryn/Windowing/Events/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Ryn.Windowing/Include/Ryn/Windowing/Input/: InputContext.hpp  Key.hpp  ModifierFlags.hpp  MouseButton.hpp
Ryn.Windowing/Source/Input/: InputContext.cpp
Ryn.Windowing/Source/MacOS/: CocoaWindow.hh  CocoaWindow.mm
Ryn.Windowing/Source/Platform/Cocoa/: CocoaApplicationDelegate.hh  CocoaApplicationDelegate.mm  CocoaView.hh  CocoaView.mm  CocoaWindow.hh  CocoaWindow.mm  CocoaWindowDelegate.hh  CocoaWindowDelegate.mm
Ryn.Windowing/Source/Platform/MacOS/: CocoaWindow.hh  CocoaWindow.mm
Windowing/: CMakeLists.txt
Windowing/Include/Ryn/: Windowing.hpp
Windowing/Include/Ryn/Windowing/: Window.hpp
Windowing/Include/Ryn/Windowing/Input/: InputContext.hpp  InputState.hpp  Key.hpp  Keys.hpp  MouseButton.hpp
Windowing/Source/: Window.cpp
Windowing/Source/GLFW/: GlfwWindow.cpp  GlfwWindow.hpp
Windowing/Source/GLFW/Input/: GlfwInputContext.cpp  GlfwInputContext.hpp
